feat: :sparkles: Fixed security Generation of JWT Token, deleted custom Cors config and replace with default, change the login logic, now request a JSON body